Fix horizontal scroll for mobile attempt 3

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -128,7 +128,7 @@ a.sign {
 
     .mobile ul {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
         width: 100%;
         margin: 0;
@@ -457,7 +457,7 @@ footer {
     
     .course-info {
         background-color: lightgray;
-        padding: 1rem 0 1.5rem 1rem;
+        padding: 1rem 0 1.5rem 0;
     }
 
     .course-info h3 {
